--- a/src/pug/medium.pug
+++ b/src/pug/medium.pug
@@ -5,19 +5,18 @@ block vars
   - stanzaIDs = ["gmdb-medium-by-gmid", "gmdb-meta-list"]
 
 block main
-  h2 Medium Information
-  //div#info.stanza-wrapper
-  //div#similar.stanza-wrapper
-  //div#organisms.stanza-wrapper
-  div.stanza-wrapper
-    togostanza-gmdb-medium-by-gmid#info(gm_id="", togostanza-about-link-placement="none")
-  div.stanza-wrapper
-    togostanza-gmdb-meta-list#similar(api_url="", limit="10", title="", column_names="true", togostanza-about-link-placement="none")
-  div.stanza-wrapper
-    togostanza-gmdb-meta-list#organisms(api_url="", limit="10", title="", column_names="true", togostanza-about-link-placement="none")
-  //h2 Organisms cultured in &nbsp;
-  //  span#GMID XXXX
-  //togostanza-gmdb_organisms_by_gmid#organisms(gm_id="")
+  div#all(style="display:none;")
+    h2 All Media
+    div.stanza-wrapper
+      togostanza-gmdb-meta-list#list(api_url="", limit="20", title="", column_names="true", togostanza-about-link-placement="none")
+  div#singleItem(style="display:none;")
+    h2 Medium Information
+    div.stanza-wrapper
+      togostanza-gmdb-medium-by-gmid#info(gm_id="", togostanza-about-link-placement="none")
+    div.stanza-wrapper
+      togostanza-gmdb-meta-list#similar(api_url="", limit="10", title="", column_names="true", togostanza-about-link-placement="none")
+    div.stanza-wrapper
+      togostanza-gmdb-meta-list#organisms(api_url="", limit="10", title="", column_names="true", togostanza-about-link-placement="none")
 
 block scripts
   script(src=`${pathToJS}media.js`)
