--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -38,7 +38,7 @@ html(lang = 'ja', xmlns:og="http://ogp.me/ns#")
     meta(name="viewport", content="width=device-width,initial-scale=1.0,minimum-scale=1.0")
     meta(name="description", content=`${meta.description}`)
     meta(name="keywords", content=``)
-    link(href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@300&display=swap" rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@300;400;600&display=swap" rel="stylesheet")
     each stanzaID in stanzaIDs
       script(src=`${pathToStanza}${stanzaID}.js` type="module" async)
 
