トップにアイコン入れた

--- a/src/less/_include/variables.less
+++ b/src/less/_include/variables.less
@@ -10,6 +10,7 @@
 
 @color-green: #8FC31F;
 @color-dark-green: #6FA80C;
+@color-light-green: #9ee233;
 
 @responsive-threshold1: 719px;
 @responsive-threshold2: 1119px;
