--- a/src/less/main/top.less
+++ b/src/less/main/top.less
@@ -26,6 +26,63 @@ body.top{
     font-size: 18px;
     line-height: 1.5;
   }
+  .stats{
+    h2{
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .container{
+      width: 600px;
+      margin: 0 auto 100px;
+      display: flex;
+    }
+    a{
+      width: 200px;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      color:@color-green;
+      text-decoration: none;
+      transition-property: color, fill;
+      transition-duration: 0.5s;
+      transition-timing-function: @ease-custom1;
+
+      &:hover{
+        color: @color-light-green;
+        span{
+          color: @color-green;
+        }
+      }
+      svg{
+        width: 120px;
+        height: 120px;
+      }
+      
+      & > span{
+        transition-property: color;
+        transition-duration: 1s;
+        transition-timing-function: @ease-custom1;
+        color: @color-black-text;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin-top: 12px;
+         & > span{
+           &:nth-child(1){
+             font-size: 48px;
+           }
+           &:nth-child(2){
+             font-size: 24px;
+             font-weight: 400;
+           }
+
+        }
+      }
+    }
+  }
+
 
   .taxon-filter{
     .section-wrapper();
