--- a/src/pug/organism.pug
+++ b/src/pug/organism.pug
@@ -16,7 +16,7 @@ block main
     div.stanza-wrapper
       togostanza-gmdb-phenotype-info#phenotype(tax_id="", togostanza-about-link-placement="none")
     div.stanza-wrapper
-      togostanza-gmdb-meta-list#media(api_url="", limit="10", title="", column_names="true", togostanza-about-link-placement="none")
+      togostanza-gmdb-meta-list#media(api_url="", limit="10", title="", column_names="true" togostanza-about-link-placement="none")
 
 block scripts
   script(src=`${pathToJS}organism.js`)
