--- a/src/pug/top.pug
+++ b/src/pug/top.pug
@@ -8,7 +8,10 @@ block vars
 block main
 
   section.instruction
-    p A short description of this site comes here. A short description of this site comes here.A short description of this site comes here.A short description of this site comes here.A short description of this site comes here.A short description of this site comes here.A short description of this site comes here.
+    p
+      span TogoMedium is a knowledge base
+      span on culture media for microorganisms.
+    p The media stored in TogoMedium are collected from information provided by various bio resource centers and research papers. The constituents of those media are described as RDF using Growth Medium Ontology. This makes it possible to explore the interrelationships among organisms, media, and ingredients.
 
   section.stats
     h2 On our database
