--- a/src/pug/top.pug
+++ b/src/pug/top.pug
@@ -8,10 +8,7 @@ block vars
 block main
 
   section.instruction
-    p
-      span TogoMedium is a knowledge base
-      span on culture media for microorganisms.
-    p The media stored in TogoMedium are collected from information provided by various bio resource centers and research papers. The constituents of those media are described as RDF using Growth Medium Ontology. This makes it possible to explore the interrelationships among organisms, media, and ingredients.
+    p TogoMedium is a knowledge base on culture media for microorganisms. The media stored in TogoMedium are collected from information provided by various bio resource centers and research papers. The constituents of those media are described as RDF using Growth Medium Ontology. This makes it possible to explore the interrelationships among organisms, media, and ingredients.
 
   section.stats
     h2 On our database
@@ -22,7 +19,7 @@ block main
           span#numMedia &nbsp;
           span media
       a(href="/organism/")
-        include ./_include/disease-light.svg
+        include ./_include/media.svg
         span
           span#numOrganisms &nbsp;
           span organisms
@@ -33,11 +30,11 @@ block main
           span components
 
   section.taxon-filter
-      h2: span Find organism from taxon
-      ul#rankList
+    h2: span Find organisms
+    ul#rankList
 
   section#freeSearch.free-search
-    h2: span Free search with keywords and IDs
+    h2: span Find media, organisms and components
     input#queryInput(placeholder="search")
     p.info#info
       | Try searching with any IDs and keyword you are come up with.<br>
