--- a/src/pug/component.pug
+++ b/src/pug/component.pug
@@ -6,11 +6,11 @@ block vars
 
 block main
   div#all(style="display:none;")
-    h2 All Components
+    h2 All components
     div.stanza-wrapper
       togostanza-gmdb-meta-list#list(api_url="", limit="20", title="", column_names="true", togostanza-about-link-placement="none")
   div#singleItem(style="display:none;")
-    h2 Component Information
+    h2 Component information
     div.stanza-wrapper
       togostanza-gmdb-component-by-gmoid#info(gmo_id="", togostanza-about-link-placement="none")
     div.stanza-wrapper
