--- a/src/pug/medium.pug
+++ b/src/pug/medium.pug
@@ -6,11 +6,11 @@ block vars
 
 block main
   div#all(style="display:none;")
-    h2 All Media
+    h2 All media
     div.stanza-wrapper
       togostanza-gmdb-meta-list#list(api_url="", limit="20", title="", column_names="true", togostanza-about-link-placement="none")
   div#singleItem(style="display:none;")
-    h2 Medium Information
+    h2 Medium information
     div.stanza-wrapper
       togostanza-gmdb-medium-by-gmid#info(gm_id="", togostanza-about-link-placement="none")
     div.stanza-wrapper
