--- a/src/pug/taxon.pug
+++ b/src/pug/taxon.pug
@@ -5,7 +5,7 @@ block vars
   - stanzaIDs = ["gmdb-taxon-by-taxid", "gmdb-meta-list"]
 
 block main
-  h2 Taxon Information
+  h2 Taxon information
   div.stanza-wrapper
     togostanza-gmdb-taxon-by-taxid#info(tax_id="", togostanza-about-link-placement="none")
   div.stanza-wrapper
