--- a/src/pug/organism.pug
+++ b/src/pug/organism.pug
@@ -6,11 +6,11 @@ block vars
 
 block main
   div#all(style="display:none;")
-    h2 All Organisms
+    h2 All organisms
     div.stanza-wrapper
       togostanza-gmdb-meta-list#list(api_url="", limit="20", title="", column_names="true", togostanza-about-link-placement="none")
   div#singleItem(style="display:none;")
-    h2 Organism Information
+    h2 Organism information
     div.stanza-wrapper
       togostanza-gmdb-organism-by-taxid#info(tax_id="", togostanza-about-link-placement="none")
     div.stanza-wrapper
