--- a/src/pug/search.pug
+++ b/src/pug/search.pug
@@ -6,7 +6,7 @@ block vars
 
 block main
   div()
-    h2 Advanced Search
+    h2 Advanced search
     div.stanza-wrapper
       togostanza-gmdb-media-finder(togostanza-about-link-placement="none")
       togostanza-gmdb-media-alignment-table(gm_ids="HM_D00001a,HM_D00065" togostanza-about-link-placement="none" style="display:none; min-height:600px")
