--- a/src/pug/compare.pug
+++ b/src/pug/compare.pug
@@ -8,7 +8,7 @@ block main
   div()
     h2 Compare
     fieldset.id-input
-      input#ids(type="text", placeholder="HM_D00001,JCM_M333" value="HM_D00001,JCM_M333")
+      input#ids(type="text", placeholder="HM_D00001,JCM_M333")
       input#compareBtn(type="button" value="compare")
     div.stanza-wrapper
       togostanza-gmdb-media-alignment-table(gm_ids="" togostanza-about-link-placement="none" style="display:none; min-height:600px")
