compare  で not foundが出るように

--- a/src/less/main/compare.less
+++ b/src/less/main/compare.less
@@ -5,6 +5,7 @@ body.compare{
     border:1px solid #ccc;
     border-radius: 10px;
     margin:16px;
+    align-items: flex-end;
   }
   input[type="text"]{
     width: 600px;
@@ -16,5 +17,12 @@ body.compare{
     margin-left: 16px;
     padding: 0 10px;
     cursor: pointer;
+    height: 42px
+  }
+
+  .error-msg{
+    color: @color-red;
+    margin-left: 16px;
+    margin-bottom: 2px;
   }
 }
