--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -23,8 +23,8 @@ block vars
 - var pathToJS = pathToAssets + "js/";
 - var pathToCSS = pathToAssets + "css/";
 - var pathToLibs = pathToAssets + "libs/";
-- var pathToStanza = "https://dbcls.github.io/togomedium-stanza/";
-// - var pathToStanza = "http://localhost:8080/";
+// - var pathToStanza = "https://dbcls.github.io/togomedium-stanza/";
+- var pathToStanza = "http://localhost:8080/";
 - var pathToSVG = pathToAssets + "images/svg/";
 - var pathToImgLG = pathToAssets + "images/lg/";
 - var pathToImgMD = pathToAssets + "images/md/";
@@ -58,7 +58,7 @@ html(lang = 'ja', xmlns:og="http://ogp.me/ns#")
   body(class=bodyClasses)
     header.site-header
       .inner
-        a(href="/"): figure.logo
+        a(href="/").logo
         nav
           ul
             li(class = `${lev1ID === 'top' ? 'active' : ''}`): a(href="/") Home
