--- a/src/less/_include/variables.less
+++ b/src/less/_include/variables.less
@@ -7,6 +7,7 @@
 @color-black-text: #323333;
 @color-gray-text-light: #9a999a;
 @color-gray-bg:#f4f3f2;
+@color-red:#CC0000;
 
 @color-green: #8FC31F;
 @color-dark-green: #6FA80C;
