--- a/src/pug/compare.pug
+++ b/src/pug/compare.pug
@@ -10,6 +10,7 @@ block main
     fieldset.id-input
       input#ids(type="text", placeholder="HM_D00001,JCM_M333")
       input#compareBtn(type="button" value="compare")
+      span.error-msg#errorMsg
     div.stanza-wrapper
       togostanza-gmdb-media-alignment-table(gm_ids="" togostanza-about-link-placement="none" style="display:none; min-height:600px")
 
