Compare by Organism の エラー処理強化

--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -23,8 +23,8 @@ block vars
 - var pathToJS = pathToAssets + "js/";
 - var pathToCSS = pathToAssets + "css/";
 - var pathToLibs = pathToAssets + "libs/";
-// - var pathToStanza = "https://dbcls.github.io/togomedium-stanza/";
-- var pathToStanza = "http://localhost:8080/";
+ - var pathToStanza = "https://dbcls.github.io/togomedium-stanza/";
+// - var pathToStanza = "http://localhost:8080/";
 - var pathToSVG = pathToAssets + "images/svg/";
 - var pathToImgLG = pathToAssets + "images/lg/";
 - var pathToImgMD = pathToAssets + "images/md/";
