--- a/src/pug/compare_by_organisms.pug
+++ b/src/pug/compare_by_organisms.pug
@@ -8,7 +8,7 @@ block main
   div()
     h2 Compare by organisms
     fieldset.id-input
-      input#ids(type="text", placeholder="1111041,1658616,760260")
+      input#ids(type="text", placeholder="77580,28024,2771,38275")
       input#compareBtn(type="button" value="compare")
       span.error-msg#errorMsg
     div.stanza-wrapper
